# fondant-app

./: CHANGELOG.md  Notes.md  OpenAPI.yml  README.md  casper-nctl.Dockerfile  chainspec.toml  docker-compose.yml  forge.config.ts  package-lock.json  package.json  rebuild.ps1  rebuild.sh  test.js  webpack.main.config.ts  webpack.renderer.config.ts
.github/workflows/: docker-image-push.yml
cctl-container/: Dockerfile  Dockerfile.dev
cctl-container/api/: Cargo.toml  Rocket.toml  endpoints.md
cctl-container/api/src/: cache.rs  commands.json  main.rs  sseCache.rs  utils.rs
cctl-container/api/src/utils/: FileStructure.txt  command_runner.rs  mod.rs  setup.json  sseCache.rs
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  casper-client.ts  constant.ts  global.ts  index.tsx  serviceWorker.ts
frontend/src/components/: navbar.tsx  utils.ts
frontend/src/components/atoms/: deploy-details-ceil.tsx  (+4 more)
frontend/src/context/: IsNetworkLaunchedContext.tsx  IsNetworkRunningContext.tsx  NodeContext.tsx  SearchContext.tsx
frontend/src/styles/: theme.ts
lean-api/: Dockerfile  index.js  package-lock.json  package.json  server.js  sseCache.js  sseListener.js
nctl-container/: Dockerfile  app.py  run.sh
proxy-api/: Dockerfile  index.js
setup/: docker-compose.yml  rebuild.ps1  rebuild.sh
src/: app.tsx  index.scss  renderer.ts
src/components/: Layout.tsx
src/components/organisms/: Navbar.tsx
src/pages/: Accounts.tsx  HomePage.tsx
src/routes/: Routes.tsx
(+30 files in other folders)
